--- a/app/styles/Home.module.css
+++ b/app/styles/Home.module.css
@@ -99,7 +99,7 @@
   flex-direction: row;
   column-gap: 4rem;
   overflow-x: scroll;
-  padding-top: 150px;
+  padding-top: 250px;
 }
 
 .recent .books::-webkit-scrollbar {
@@ -136,7 +136,7 @@
 }
 
 .events {
-  padding-top: 320px;
+  padding-top: 400px;
   position: relative;
   width: 100%;
 }
@@ -145,7 +145,7 @@
   background-color: rgba(0, 0, 0, 0.09);
   margin: 0 200px;
   min-height: 480px;
-  padding: 150px 100px 100px 100px;
+  padding: 200px 100px 100px 100px;
   display: flex;
   flex-direction: column;
   row-gap: 2rem;
@@ -173,7 +173,7 @@
   text-transform: uppercase;
   position: absolute;
   left:100px;
-  top: 230px;
+  top: 180px;
   max-width: 800px;
   z-index: 2;
 }
@@ -182,7 +182,7 @@
   display: block;
   position: absolute;
   height: 100px;
-  top: 250px;
+  top: 200px;
   right: 100px;
   z-index: 4;
 }
